# PineVision

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
config/: model.yaml  pineapple_maskrcnn_clean.yaml  pineapple_training.yaml  pineapple_training_maskrcnn.yaml  pineapple_training_simple.yaml  training.yaml
scripts/: generate_dataset_masks.py  launch_maskrcnn_training.py  test_mask_generation.py  test_maskrcnn_setup.py  test_training_setup.py  train_pineapple.sh
src/: __init__.py
src/data/: __init__.py  verify_dataset.py  yolo_to_coco.py
src/inference/: __init__.py  visualize_test_results.py
src/models/: __init__.py
src/training/: __init__.py  augmentation_config.py  train_pineapple_maskrcnn.py
